kube/components/om/om-server/om-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: om-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: om-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: om-server
    spec:
      securityContext:
        runAsUser: 999
        fsGroup: 999
      containers:
        - name: om-server
          image: docker.io/openmetadata/server:1.11.3
          #command: ["/bin/sh"]
          #args: ["-c", "sleep infinity"]
          ports:
            - containerPort: 80
            - containerPort: 8585
              protocol: TCP
            - containerPort: 8586
              protocol: TCP

          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 2000m
              memory: 2Gi
          volumeMounts:
            - name: om-server-config-volume
              mountPath: /opt/openmetadata/conf/openmetadata.yaml
              subPath: openmetadata.yaml
            - name: om-server-logs-volume
              mountPath: /opt/openmetadata/logs

      restartPolicy: Always
      volumes:
        - name: om-server-config-volume
          configMap:
            name: om-server-config
        - name: om-server-logs-volume
          persistentVolumeClaim:
            claimName: om-server-logs-pvc
