kube/components/om/om-server/om-server-egress-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-traffic-from-om-server
spec:
  podSelector:
    matchLabels:
      app: om-server
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.1.0.0/24
      ports:
        - protocol: TCP
          port: 3306  # MySQL
        - protocol: TCP
          port: 9200  # Elasticsearch
        - protocol: TCP
          port: 8080  # Airflow
        - protocol: TCP
          port: 8585  # OM Server
        - protocol: TCP
          port: 8586  # OM Admin
    - to:
        - podSelector:
            matchExpressions:
              - { key: app, operator: In, values: [ om-mysql, om-elasticsearch, om-airflow ] }
      ports:
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 9200
        - protocol: TCP
          port: 8080
